testes e exercicios/03-07-19/log.txt
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rails server
=> Booting Puma
=> Rails 5.2.3 application starting in development 
=> Run `rails server -h` for more startup options
Puma starting in single mode...
* Version 3.12.1 (ruby 2.4.4-p296), codename: Llamas in Pajamas
* Min threads: 5, max threads: 5
* Environment: development
* Listening on tcp://localhost:3000
Use Ctrl-C to stop


vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm list known
Warning, new version of rvm available '1.29.8-next', you are using older version '1.29.3'.
You can disable this warning with:    echo rvm_autoupdate_flag=0 >> ~/.rvmrc
You can enable  auto-update  with:    echo rvm_autoupdate_flag=2 >> ~/.rvmrc
# MRI Rubies
[ruby-]1.8.6[-p420]
[ruby-]1.8.7[-head] # security released on head
[ruby-]1.9.1[-p431]
[ruby-]1.9.2[-p330]
[ruby-]1.9.3[-p551]
[ruby-]2.0.0[-p648]
[ruby-]2.1[.10]
[ruby-]2.2[.10]
[ruby-]2.3[.7]
[ruby-]2.4[.4]
[ruby-]2.5[.1]
[ruby-]2.6[.0-preview1]
ruby-head

# for forks use: rvm install ruby-head-<name> --url https://github.com/github/ruby.git --branch 2.2

# JRuby
jruby-1.6[.8]
jruby-1.7[.27]
jruby[-9.1.17.0]
jruby-head

# Rubinius
rbx-1[.4.3]
rbx-2.3[.0]
rbx-2.4[.1]
rbx-2[.5.8]
rbx-3[.100]
rbx-head

# Opal
opal

# Minimalistic ruby implementation - ISO 30170:2012
mruby-1.0.0
mruby-1.1.0
mruby-1.2.0
mruby-1.3.0
mruby-1[.4.0]
mruby[-head]

# Ruby Enterprise Edition
ree-1.8.6
ree[-1.8.7][-2012.02]

# Topaz
topaz

# MagLev
maglev-1.0.0
maglev-1.1[RC1]
maglev[-1.2Alpha4]
maglev-head

# Mac OS X Snow Leopard Or Newer
macruby-0.10
macruby-0.11
macruby[-0.12]
macruby-nightly
macruby-head

# IronRuby
ironruby[-1.1.3]
ironruby-head
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 

vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm list
=* ruby-2.4.4 [ x86_64 ]

# => - current
# =* - current && default
#  * - default

vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 


vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ ruby install 2.3.7
ruby: No such file or directory -- install (LoadError)
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm install 2.3.7
Warning, new version of rvm available '1.29.8-next', you are using older version '1.29.3'.
You can disable this warning with:    echo rvm_autoupdate_flag=0 >> ~/.rvmrc
You can enable  auto-update  with:    echo rvm_autoupdate_flag=2 >> ~/.rvmrc
Searching for binary rubies, this might take some time.
Found remote file https://rvm_io.global.ssl.fastly.net/binaries/ubuntu/18.04/x86_64/ruby-2.3.7.tar.bz2
Checking requirements for ubuntu.
Removing undesired packages: libssl-dev....
Installing requirements for ubuntu.
Updating system....
Installing required packages: libssl1.0-dev.....
Requirements installation successful.
ruby-2.3.7 - #configure
ruby-2.3.7 - #download
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
100 26.5M  100 26.5M    0     0  5520k      0  0:00:04  0:00:04 --:--:-- 7332k
No checksum for downloaded archive, recording checksum in user configuration.
ruby-2.3.7 - #validate archive
ruby-2.3.7 - #extract
ruby-2.3.7 - #validate binary
ruby-2.3.7 - #setup
ruby-2.3.7 - #gemset created /home/vagrant/.rvm/gems/ruby-2.3.7@global
ruby-2.3.7 - #importing gemset /home/vagrant/.rvm/gemsets/global.gems...........................
ruby-2.3.7 - #generating global wrappers.......
ruby-2.3.7 - #gemset created /home/vagrant/.rvm/gems/ruby-2.3.7
ruby-2.3.7 - #importing gemsetfile /home/vagrant/.rvm/gemsets/default.gems evaluated to empty gem list
ruby-2.3.7 - #generating default wrappers.......
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 


vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm list
=> ruby-2.3.7 [ x86_64 ]
 * ruby-2.4.4 [ x86_64 ]

# => - current
# =* - current && default
#  * - default

vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 


vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm u
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm use 2.4.4
Using /home/vagrant/.rvm/gems/ruby-2.4.4
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ rvm list
   ruby-2.3.7 [ x86_64 ]
=* ruby-2.4.4 [ x86_64 ]

# => - current
# =* - current && default
#  * - default

vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 


vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ 
vagrant@ubuntu-bionic:/vagrant/workspace/meu_projeto$ cd ..
vagrant@ubuntu-bionic:/vagrant/workspace$ cd modulo_02/
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ ruby 01_teste_ruby.rb 
Teste de impressão
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ 


vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ 
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ irb
2.4.4 :001 > 1 + 2
 => 3 
2.4.4 :002 > a = { :nome=>"jason" }
 => {:nome=>"jason"} 
2.4.4 :003 > a
 => {:nome=>"jason"} 
2.4.4 :004 > a.nome.reverse
NoMethodError: undefined method `nome' for {:nome=>"jason"}:Hash
        from (irb):4
        from /home/vagrant/.rvm/rubies/ruby-2.4.4/bin/irb:11:in `<main>'
2.4.4 :005 > a.nome
NoMethodError: undefined method `nome' for {:nome=>"jason"}:Hash
        from (irb):5
        from /home/vagrant/.rvm/rubies/ruby-2.4.4/bin/irb:11:in `<main>'
2.4.4 :006 > a[nome]
NameError: undefined local variable or method `nome' for main:Object
        from (irb):6
        from /home/vagrant/.rvm/rubies/ruby-2.4.4/bin/irb:11:in `<main>'
2.4.4 :007 > a
 => {:nome=>"jason"} 
2.4.4 :008 > a[:nome]
 => "jason" 
2.4.4 :009 > a[:nome].reverse
 => "nosaj" 
2.4.4 :010 > 



2.4.4 :010 > 
2.4.4 :010 > ^C
2.4.4 :010 > 
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ gem install pry
Fetching: coderay-1.1.2.gem (100%)
Successfully installed coderay-1.1.2
Fetching: pry-0.12.2.gem (100%)
Successfully installed pry-0.12.2
invalid options: -SNw2
(invalid options are ignored)
Parsing documentation for coderay-1.1.2
Installing ri documentation for coderay-1.1.2
Parsing documentation for pry-0.12.2
Installing ri documentation for pry-0.12.2
Done installing documentation for coderay, pry after 2 seconds
2 gems installed
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ 



[1] pry(main)> 
[1] pry(main)> puts "fafafa"
fafafa
=> nil
[2] pry(main)> a = { gasparzin: 'xaxaxaxa' }                                                                                                                                                                                                    
=> {:gasparzin=>"xaxaxaxa"}
[3] pry(main)> a.gasparzin
NoMethodError: undefined method `gasparzin' for {:gasparzin=>"xaxaxaxa"}:Hash
from (pry):3:in `__pry__'
[4] pry(main)> a.[:gasparzin]
SyntaxError: unexpected '[', expecting '('
a.[:gasparzin]
   ^
[4] pry(main)> a[:gasparzin]
=> "xaxaxaxa"
[5] pry(main)> a[:gasparzin].reverse
=> "axaxaxax"
[6] pry(main)> 


vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ touch ~/.irbrc


vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ vim ~/
.bash_history            .bashrc                  .cache/                  .forever/                .irb-history             .mkshrc                  .nvm/                    .ssh/                    .zlogin
.bash_logout             .bundle/                 .cloud-locale-test.skip  .gem/                    .irbrc                   .node_repl_history       .profile                 .viminfo                 .zshrc
.bash_profile            .c9/                     .config/                 .gnupg/                  .local/                  .npm/                    .rvm/                    .wget-hsts               Cloud9IDE/
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ vim ~/.irbrc 
vagrant@ubuntu-bionic:/vagrant/workspace/modulo_02$ irb
[1] pry(main)> fafafa
NameError: undefined local variable or method `fafafa' for main:Object
from (pry):1:in `__pry__'
[2] pry(main)> b = 'afafaxaxa'
=> "afafaxaxa"
[3] pry(main)> 

